<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@android:drawable/ic_lock_idle_charging"
        android:title="@string/title_recipes" />

    <item
        android:id="@+id/navigation_meals"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/title_meals" />

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shopping" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/title_profile" />

</menu>